--- a/duval-rs/Cargo.toml
+++ b/duval-rs/Cargo.toml
@@ -2,6 +2,11 @@
 name = "duval-rs"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A simple implementation of the Duval algorithm in Rust"
+repository = "https://github.com/louisabraham/duval"
+readme = "README.md"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
