--- a/duval-rs/Cargo.toml
+++ b/duval-rs/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT"
 description = "A simple implementation of the Duval algorithm in Rust"
 repository = "https://github.com/louisabraham/duval"
-readme = "README.md"
+readme = "../README.md"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
